--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 <table>
     <tbody><tr>
-        <td><img src="./Sujal Agarwal -Resume_files/WhatsApp Image 2023-06-22 at 7.14.37 PM (2).jpeg" height="200" width="250"></td>
+        <td><img src="WhatsApp Image 2023-06-22 at 7.14.37 PM (2).jpeg" height="200" width="250"></td>
         <td>Hi, I am Sujal Agarwal currently studying in B. P. Podaar Institute of Management and technology in Cse from 2022-26 . I have a idea of C, C++ , Java languages. I am currently studying DSA( in C ++) and web development ( both frontend and backend) . I want to become a good software developer and I love to explore various technologies to develop efficient and scalable solutions.I am constantly expanding my skills to stay up-to-date  with the latest advancement in technology.</td>  
     </tr>
 </tbody></table>
